--- a/Assets/Jam54Launcher/UI/Styles.uss
+++ b/Assets/Jam54Launcher/UI/Styles.uss
@@ -834,3 +834,68 @@
     background-image: url('project://database/Assets/Jam54Launcher/Textures/PlayStore-Icon.png?fileID=2800000&guid=7beb5fff043d617489d78078877826f7&type=3#PlayStore-Icon');
     -unity-background-image-tint-color: rgba(255, 255, 255, 0.75);
 }
+
+.Install_Button {
+    width: auto;
+    margin-right: 0;
+    background-image: url('project://database/Assets/Jam54Launcher/Textures/Install.png?fileID=2800000&guid=1200d88afa66f8b43a1f542d3247cc1e&type=3#Install');
+    background-color: rgba(255, 255, 255, 0);
+    border-left-width: 0;
+    border-right-width: 0;
+    border-top-width: 0;
+    border-bottom-width: 0;
+    -unity-font-definition: url('project://database/Assets/Jam54Launcher/Other/Fonts/Roboto-Regular%20SDF.asset?fileID=11400000&guid=3425d65c12ac42647a4dfc5a05176cd2&type=2#Roboto-Regular SDF');
+    font-size: 21px;
+    color: rgb(255, 255, 255);
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    border-top-left-radius: 9px;
+    border-bottom-left-radius: 9px;
+    border-top-right-radius: 9px;
+    border-bottom-right-radius: 9px;
+    flex-grow: 1;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    flex-shrink: 1;
+    height: 100%;
+}
+
+.Install_Button:hover {
+    width: auto;
+    margin-right: 0;
+    background-image: url('project://database/Assets/Jam54Launcher/Textures/Install.png?fileID=2800000&guid=1200d88afa66f8b43a1f542d3247cc1e&type=3#Install');
+    background-color: rgba(255, 255, 255, 0);
+    border-left-width: 0;
+    border-right-width: 0;
+    border-top-width: 0;
+    border-bottom-width: 0;
+    -unity-font-definition: url('project://database/Assets/Jam54Launcher/Other/Fonts/Roboto-Regular%20SDF.asset?fileID=11400000&guid=3425d65c12ac42647a4dfc5a05176cd2&type=2#Roboto-Regular SDF');
+    font-size: 21px;
+    color: rgb(255, 255, 255);
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    border-top-left-radius: 9px;
+    border-bottom-left-radius: 9px;
+    border-top-right-radius: 9px;
+    border-bottom-right-radius: 9px;
+    flex-grow: 1;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    flex-shrink: 1;
+    height: 100%;
+    scale: 1.07 1.07;
+}
