Enabled text wrapping, auto resizing etc. To make sure all the text objects still fit  across different languages

--- a/Assets/Jam54Launcher/UI/Styles.uss
+++ b/Assets/Jam54Launcher/UI/Styles.uss
@@ -29,9 +29,9 @@
     border-right-width: 0;
     border-top-width: 0;
     border-bottom-width: 0;
-    -unity-background-scale-mode: scale-to-fit;
-    width: 144px;
-    height: 64px;
+    -unity-background-scale-mode: stretch-to-fill;
+    width: 175px;
+    height: 70px;
     color: rgb(255, 255, 255);
     -unity-font-definition: url('project://database/Assets/Jam54Launcher/Other/Fonts/BalooDa2-Regular%20SDF.asset?fileID=11400000&guid=22c9334beaad2444688d0e6089d93388&type=2#BalooDa2-Regular SDF');
     font-size: 24px;
@@ -51,14 +51,15 @@
     border-right-width: 0;
     border-top-width: 0;
     border-bottom-width: 0;
-    -unity-background-scale-mode: scale-to-fit;
-    width: 144px;
+    -unity-background-scale-mode: stretch-to-fill;
+    width: 175px;
     height: 70px;
     color: rgb(255, 255, 255);
     -unity-font-definition: url('project://database/Assets/Jam54Launcher/Other/Fonts/BalooDa2-Regular%20SDF.asset?fileID=11400000&guid=22c9334beaad2444688d0e6089d93388&type=2#BalooDa2-Regular SDF');
     font-size: 24px;
     top: 2px;
     -unity-font-style: normal;
+    scale: 1.05 1.05;
 }
 
 .App_Image {
@@ -122,9 +123,9 @@
     border-right-width: 0;
     border-top-width: 0;
     border-bottom-width: 0;
-    -unity-background-scale-mode: scale-to-fit;
-    width: 144px;
-    height: 64px;
+    -unity-background-scale-mode: stretch-to-fill;
+    width: 175px;
+    height: 70px;
     color: rgb(255, 255, 255);
     -unity-font-definition: url('project://database/Assets/Jam54Launcher/Other/Fonts/BalooDa2-Regular%20SDF.asset?fileID=11400000&guid=22c9334beaad2444688d0e6089d93388&type=2#BalooDa2-Regular SDF');
     font-size: 24px;
@@ -144,14 +145,15 @@
     border-right-width: 0;
     border-top-width: 0;
     border-bottom-width: 0;
-    -unity-background-scale-mode: scale-to-fit;
-    width: 144px;
+    -unity-background-scale-mode: stretch-to-fill;
+    width: 175px;
     height: 70px;
     color: rgb(255, 255, 255);
     -unity-font-definition: url('project://database/Assets/Jam54Launcher/Other/Fonts/BalooDa2-Regular%20SDF.asset?fileID=11400000&guid=22c9334beaad2444688d0e6089d93388&type=2#BalooDa2-Regular SDF');
     font-size: 24px;
     top: 2px;
     -unity-font-style: normal;
+    scale: 1.05 1.05;
 }
 
 .Programs_Image {
@@ -334,13 +336,15 @@
     border-right-width: 0;
     border-top-width: 0;
     border-bottom-width: 0;
-    -unity-background-scale-mode: scale-to-fit;
-    width: 194px;
-    height: 64px;
+    -unity-background-scale-mode: stretch-to-fill;
+    width: auto;
+    height: auto;
     color: rgb(255, 255, 255);
     -unity-font-definition: url('project://database/Assets/Jam54Launcher/Other/Fonts/BalooDa2-Regular%20SDF.asset?fileID=11400000&guid=22c9334beaad2444688d0e6089d93388&type=2#BalooDa2-Regular SDF');
     font-size: 24px;
     -unity-font-style: normal;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .Library_Button:hover {
@@ -355,14 +359,16 @@
     border-right-width: 0;
     border-top-width: 0;
     border-bottom-width: 0;
-    -unity-background-scale-mode: scale-to-fit;
-    width: 194px;
-    height: 64px;
+    -unity-background-scale-mode: stretch-to-fill;
+    width: auto;
+    height: auto;
     color: rgb(255, 255, 255);
     -unity-font-definition: url('project://database/Assets/Jam54Launcher/Other/Fonts/BalooDa2-Regular%20SDF.asset?fileID=11400000&guid=22c9334beaad2444688d0e6089d93388&type=2#BalooDa2-Regular SDF');
     font-size: 24px;
     -unity-font-style: normal;
     scale: 1.07 1.07;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .SettingsBackgroundCircle {
@@ -897,5 +903,5 @@
     margin-bottom: 0;
     flex-shrink: 1;
     height: 100%;
-    scale: 1.07 1.07;
+    scale: 1.05 1.05;
 }
