--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/main.css
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/main.css
@@ -32,5 +32,5 @@ BorderPane {
     -fx-background-radius: 0 9 9 0;
     -fx-pref-height: 1000000;
     -fx-text-fill: white;
-    -fx-skin: "com.jam54.jam54_launcher.animations.ButtonScale";
+    -fx-skin: "com.jam54.jam54_launcher.Animations.ButtonScale";
 }
