--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/main.fxml
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/main.fxml
@@ -27,7 +27,7 @@
                   <Insets bottom="15.0" left="50.0" top="15.0" />
                </HBox.margin>
                <children>
-                  <Label text="\%UpdateAvailable">
+                  <Label text="%UpdateAvailable">
                      <padding>
                         <Insets left="10.0" right="10.0" />
                      </padding>
@@ -35,7 +35,7 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Button mnemonicParsing="false" onAction="#restartProgram" text="\%Restart">
+                  <Button mnemonicParsing="false" onAction="#restartProgram" text="%Restart">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
