--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/css/main.css
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/css/main.css
@@ -16,6 +16,28 @@ BorderPane {
 
 .leftbar {
     -fx-background-color: linear-gradient(from 25% 25% to 100% 100%, #0d0f26, #090b20);
+    -fx-alignment: top-center;
+    -fx-spacing: 15;
+}
+
+.leftBarToggle {
+    -fx-background-radius: 64;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+
+    -fx-pref-width: 50;
+    -fx-pref-height: 50;
+
+    -fx-background-color: rgba(255, 255, 255, 0);
+    -fx-padding: 0;
+}
+
+.leftBarToggle:selected {
+    -fx-background-color: rgba(255, 255, 255, 0.1);
+}
+
+.leftBarToggle:hover {
+    -fx-background-color: rgba(255, 255, 255, 0.25);
 }
 
 .updateAvailableHolder{
@@ -33,4 +55,29 @@ BorderPane {
     -fx-pref-height: 1000000;
     -fx-text-fill: white;
     -fx-skin: "com.jam54.jam54_launcher.Animations.ButtonScale";
+}
+
+.buttonBar {
+    -fx-alignment: center;
+}
+
+.titleBar {
+    -fx-padding: 50px;
+    -fx-font-size: 16;
+    -fx-font-weight: bold;
+}
+
+.titleBar Label {
+    -fx-text-fill: white;
+}
+
+.titleBar HBox {
+    -fx-alignment: center-right;
+    -fx-spacing: 5;
+}
+
+.searchBar {
+    -fx-background-position: left center;
+    -fx-background-repeat: no-repeat;
+    -fx-background-image:url('https://placekitten.com/20/20');
 }
