--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/main.fxml
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/main.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="754.0" prefWidth="1228.0" stylesheets="@css/main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="754.0" prefWidth="1228.0" stylesheets="@css/main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <HBox maxHeight="64.0" prefHeight="64.0" styleClass="topbar" BorderPane.alignment="CENTER_LEFT">
          <children>
@@ -49,6 +49,9 @@
       </HBox>
    </top>
    <left>
-      <VBox prefWidth="64.0" styleClass="leftbar" BorderPane.alignment="CENTER" />
+      <VBox fx:id="leftBar" maxWidth="64.0" prefWidth="64.0" styleClass="leftbar" BorderPane.alignment="CENTER">
+         <padding>
+            <Insets top="15.0" />
+         </padding></VBox>
    </left>
 </BorderPane>
