Added functionality to the Games/Programs window
- The user can now switch between the games and programs page
- It's also possible to switch between the Games/Programs and Settings windows

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/css/main.css
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/css/main.css
@@ -83,3 +83,7 @@ BorderPane {
     -fx-background-repeat: no-repeat;
     -fx-background-image:url('https://placekitten.com/20/20');
 }
+
+.applicationsHolder {
+    -fx-pref-height: 1000000;
+}
