--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/css/mainDark.css
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/css/mainDark.css
@@ -1,21 +1,47 @@
+* {
+    -bg-main: #141414;
+    -bg-foreground: #242424;
+    -bg-selected: #3E3E3E;
+
+    -accent-button-main: #3D77C2;
+    -accent-button-hovered: #3669AB;
+    -accent-button-clicked: #2E5A93;
+
+    -hollow-button-unselected: rgba(255, 255, 255, 0);
+    -hollow-button-hovered: #3E3E3E;
+    -hollow-button-clicked: #595959;
+
+    -filled-button-unselected: #404040;
+    -filled-button-hovered: #383838;
+    -filled-button-clicked: #313131;
+
+    -button-icon-unselected: #7C7C7C;
+    -button-icon-hovered: #C9C9C9;
+    -button-icon-clicked: #D1D1D1;
+
+    -text-highlighted: #FFFFFF;
+    -text-not-highlighted: #BDBDBD;
+
+    -other-border-division-scrollbar: #404040;
+    -other-blur: rgba(255, 255, 255, 0.25);
+}
+
 BorderPane {
-    /*-fx-background-color: linear-gradient(from 25% 25% to 100% 175%, #0F1330, #00040c);*/
-    /*background-image: url("data:image/svg+xml,");*/
-    /*background-repeat: no-repeat;*/
-    /*padding-right: calc(1.5em + 0.75rem);*/
-    /*background-position: center right calc(0.375em + 0.1875rem);*/
-    /*background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);*/
-    -fx-background-color: linear-gradient(from 25% 25% to 100% 100%, #101431, #060412);
+    -fx-background-color: -bg-foreground;
+}
+
+GamesProgramsWindow, ApplicationWindow, SettingsWindow {
+    -fx-background-color: -bg-main;
+    -fx-background-radius: 8 0 0 0;
 }
 
 .topbar {
-    /*-fx-background-color: linear-gradient(to right, #0A0A1E, #080718);*/
-    -fx-background-color: linear-gradient(from 25% 25% to 100% 100%, #0a0b20, #080516);
-    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.5, 0.0, 0.0);
+    -fx-background-color: -bg-foreground;
+    /*-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.5, 0.0, 0.0);*/
 }
 
 .leftBar {
-    -fx-background-color: linear-gradient(from 25% 25% to 100% 100%, #0d0f26, #090b20);
+    -fx-background-color: -bg-foreground;
     -fx-alignment: top-center;
     -fx-spacing: 15;
     -fx-pref-width: 64;
@@ -60,7 +86,19 @@ BorderPane {
 }
 
 .buttonBar {
+    -fx-pref-width: 10000000000000000;
+}
+
+.buttonBarToggles {
     -fx-alignment: center;
+}
+
+.buttonBarTitle {
+    -fx-alignment: CENTER_LEFT;
+}
+
+.buttonBarSearchBar{
+    -fx-alignment: CENTER_RIGHT;
 }
 
 .titleBar {
